<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout tools:context=".GameActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"
    >

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.q42.android.scrollingimageview.ScrollingImageView
            android:id="@+id/scrolling_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            scrolling_image_view:speed="0dp"
            scrolling_image_view:src="@drawable/background" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layoutDirection="locale"
            >

            <TextView
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:text="@string/coins"
                android:textSize="18sp"
                android:id="@+id/coinsLabel"
                android:layout_weight="1"
                android:paddingEnd="10dp"

                />

            <TextView
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:text="@string/score"
                android:textSize="18sp"
                android:id="@+id/scoreLabel"
                android:layout_gravity="start"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/pause_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/pause_btn"
                android:onClick="pauseGame"
                android:layout_gravity="center|end"
                android:layout_marginEnd="50dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/level_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level_up"
            android:textColor="@color/gold"
            android:textSize="35dp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/start_help_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/start_game_help"
            android:textSize="15sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/startLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tap_to_start"
            android:textSize="30sp" />

        <FrameLayout
            android:id="@+id/game_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/game_player"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:src="@drawable/player_animation_1" />

            <ImageView
                android:id="@+id/bronze_coin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/coin_animation_bronze"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/silver_coin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/coin_animation_silver"
                android:visibility="gone"
                />


            <ImageView
                android:id="@+id/gold_coin"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/coin_animation_gold"
                android:visibility="gone"
                />

        </FrameLayout>
    </FrameLayout>


</LinearLayout>