<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:id="@+id/layout_id"
    android:gravity="center"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/semiBlack"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_over"
                    android:fontFamily="@font/creamybutter"
                    android:textSize="45sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="220dp"
                    android:background="@drawable/paper_game_over"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yourscore"
                            android:textSize="30sp"
                            android:id="@+id/your_score_text"
                            android:textStyle="bold"
                            android:textColor="#fff"
                            android:layout_marginBottom="10dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/highscore"
                            android:textSize="25dp"
                            android:id="@+id/highScoreLabel"
                            android:textColor="#fff"
                            android:layout_marginBottom="10dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coins_collected"
                            android:textSize="25dp"
                            android:id="@+id/coins_collected_label"
                            android:textColor="#fff"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    >
                        <Button
                            android:id="@+id/home_btn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:onClick="goHome"
                            android:background="@drawable/button_home"
                            android:layout_marginEnd="40dp"
                            />
                        <Button
                            android:id="@+id/resume_btn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/button_score"
                            android:onClick="highScores"
                            android:layout_marginEnd="40dp"
                            />
                        <Button
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:textAllCaps="false"
                            android:id="@+id/again_btn"
                            android:onClick="retryAgain"
                            android:background="@drawable/button_retry"
                            />
                </LinearLayout>
        </LinearLayout>
</LinearLayout>